--- a/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
+++ b/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
@@ -243,13 +243,13 @@ input {
     border-radius: 4px;
     box-shadow: 0 0 5px #c0c0c0;
     padding: 10px;
-    .MuiButton-root {
-      border-width: 0.75px;
-      font-size: 10px;
-      height: 24px;
-      text-transform: none;
-      width: 90px;
-    }
+    // .MuiButton-root {
+    //   border-width: 0.75px;
+    //   font-size: 10px;
+    //   height: 24px;
+    //   text-transform: none;
+    //   width: 90px;
+    // }
   }
   position: absolute;
   z-index: 10;
