--- a/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
+++ b/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
@@ -253,5 +253,11 @@ input {
   }
   position: absolute;
   z-index: 10;
-  transform: translateX(-50%) translateY(-100%) translateY(-30px);
+  transform: translateX(-50%) translateY(0%) translateY(30px);
+}
+
+.MuiTooltip-tooltip {
+  font-size: 14px !important;
+  background-color: #404040e0 !important;
+  z-index: 1000 !important;
 }
