--- a/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
+++ b/src/white-gloves-custom-workflow/WhiteGlovesCustomWorkflow.scss
@@ -130,6 +130,10 @@ input {
     }
   }
 
+  &.dead-end .content {
+    background-color: #ff0000c0 !important;
+  }
+
   &.START {
     .content,
     .handle {
